- don't use sun's encoder. we already have on in our tree use that. - add an explicit convertToString for byte[]